cabal-version:      3.8
name:               aoc2022
version:            0.1.0.0
synopsis:

description:        Solutions for Advent of Code 2022
homepage:           https://github.com/robbert-vdh/aoc2022

license:            ISC
license-file:       LICENSE
author:             Robbert van der Helm
maintainer:         mail@robbertvanderhelm.nl

common base
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra

    -- GHC ^>=9.2.4
    build-depends:    base ^>=4.16.3.0,

executable day-1
    import:           base
    -- NOTE: This could be moved to the common base stanza, but hls doesn't
    --       understand that:
    --       https://github.com/haskell/haskell-language-server/issues/2932
    hs-source-dirs:   app
    main-is:          Day1.hs

executable day-2
    import:           base
    hs-source-dirs:   app
    main-is:          Day2.hs

executable day-3
    import:           base
    hs-source-dirs:   app
    main-is:          Day3.hs

    build-depends:    containers ^>=0.6.6,
                      split ^>=0.2.3.5,

executable day-4
    import:           base
    hs-source-dirs:   app
    main-is:          Day4.hs

    build-depends:    split ^>=0.2.3.5,
