cabal-version:      3.8
name:               aoc2022
version:            0.1.0.0
synopsis:

description:        Solutions for Advent of Code 2022
homepage:           https://github.com/robbert-vdh/aoc2022

license:            ISC
license-file:       LICENSE
author:             Robbert van der Helm
maintainer:         mail@robbertvanderhelm.nl

common base
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra

    -- GHC ^>=9.2.4
    build-depends:    base ^>=4.16.3.0,

executable day-1
    import:           base
    -- NOTE: This could be moved to the common base stanza, but hls doesn't
    --       understand that:
    --       https://github.com/haskell/haskell-language-server/issues/2932
    hs-source-dirs:   app
    main-is:          Day1.hs

executable day-2
    import:           base
    hs-source-dirs:   app
    main-is:          Day2.hs

executable day-3
    import:           base
    hs-source-dirs:   app
    main-is:          Day3.hs

    build-depends:    containers ^>=0.6.6,
                      split ^>=0.2.3.5,

executable day-4
    import:           base
    hs-source-dirs:   app
    main-is:          Day4.hs

    build-depends:    split ^>=0.2.3.5,

executable day-5
    import:           base
    hs-source-dirs:   app
    main-is:          Day5.hs

    build-depends:    containers ^>=0.6.6,
                      parsec ^>=3.1.15.1,

executable day-6
    import:           base
    hs-source-dirs:   app
    main-is:          Day6.hs

executable day-7
    import:           base
    hs-source-dirs:   app
    main-is:          Day7.hs

    build-depends:    parsec ^>=3.1.15.1,
                      unordered-containers ^>=0.2.19.1,

executable day-8
    import:           base
    hs-source-dirs:   app
    main-is:          Day8.hs

    build-depends:    massiv ^>=1.0.2.0,

executable day-9
    import:           base
    hs-source-dirs:   app
    main-is:          Day9.hs

    build-depends:    mtl ^>=2.3.1,
                      unordered-containers ^>=0.2.19.1,
                      vector ^>=0.13.0.0,

executable day-10
    import:           base
    hs-source-dirs:   app
    main-is:          Day10.hs

    build-depends:    mtl ^>=2.3.1,
                      split ^>=0.2.3.5,

executable day-11
    import:           base
    hs-source-dirs:   app
    main-is:          Day11.hs

    build-depends:    megaparsec ^>=9.3.0,
                      mtl ^>=2.3.1,
                      vector ^>=0.13.0.0,

executable day-12
    import:           base
    hs-source-dirs:   app
    main-is:          Day12.hs

    build-depends:    containers ^>=0.6.6,
                      pqueue ^>=1.4.3.0,
                      split ^>=0.2.3.5,
                      unordered-containers ^>=0.2.19.1,
                      vector ^>=0.13.0.0,

executable day-13
    import:           base
    hs-source-dirs:   app
    main-is:          Day13.hs

    build-depends:    megaparsec ^>=9.3.0,

executable day-14
    import:           base
    hs-source-dirs:   app
    main-is:          Day14.hs

    build-depends:    megaparsec ^>=9.3.0,
                      split ^>=0.2.3.5,
                      vector ^>=0.13.0.0,

executable day-15
    import:           base
    hs-source-dirs:   app
    main-is:          Day15.hs

    build-depends:    megaparsec ^>=9.3.0,
